correct layout issues on form controls

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,104 @@
 	src: url('../fonts/veteran_typewriter.ttf') format('truetype');
 }
 
-p {
-  font-family: 'journal', serif;
+body {
+  font: 21px serif;
+  padding: 2em;
+  margin: 0;
+  background: #222;
+}
+
+form {
+  position: relative;
+  width: 740px;
+  height: 498px;
+  margin: 0 auto;
+  background: #fff url(../img/background.jpg)
+}
+
+h1 {
+  position: absolute;
+  left: 415px;
+  top: 185px;
+  font: 1em "veteran-typewriter", sans-serif;
+}
+
+#from{
+  position: absolute;
+  left: 398px;
+  top: 235px;
+}
+
+#reply {
+  position: absolute;
+  left : 390px;
+  top  : 285px;
+}
+
+#message {
+  position: absolute;
+  left: 20px
+  top: 70px;
+}
+
+label {
+  font: .8em "veteran-typewriter",sans-serif;
+}
+
+input, textarea {
+  font: .9em/1.5em "journal",sans-serif;
+  border: none;
+  padding: 0 10px;
+  margin: 0;
+  width: 240px;
+  background: none;
+}
+
+input:focus,textarea:focus {
+  background: rgba(0,0,0,.1);
+  border-radius: 5px;
+  outline: none;
+}
+
+input {
+    height: 2.5em; /* for IE */
+    vertical-align: middle; /* This is optional but it makes legacy IEs look better */
+}
+
+textarea {
+  display : block;
+  padding : 10px;
+  margin  : 10px 0 0 -10px;
+  width   : 340px;
+  height  : 360px;
+  resize  : none;
+  overflow: auto;
+}
+
+button {
+  position     : absolute;
+  left         : 440px;
+  top          : 360px;
+  padding      : 5px;
+  font         : bold .6em sans-serif;
+  border       : 2px solid #333;
+  border-radius: 5px;
+  background   : none;
+  cursor       : pointer;
+-webkit-transform: rotate(-1.5deg);
+   -moz-transform: rotate(-1.5deg);
+    -ms-transform: rotate(-1.5deg);
+     -o-transform: rotate(-1.5deg);
+        transform: rotate(-1.5deg);
+}
+
+button:after {
+  content: " >>>";
+}
+
+button:hover,
+button:focus {
+  outline   : none;
+  background: #000;
+  color   : #FFF;
 }
